[package]
name = "vk-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
lazy_static = "1.4.0"
log = "0.4.17"
nalgebra-glm = "0.17.0"
png = "0.17.6"
pretty_env_logger = "0.4.0"
thiserror = "1.0.37"
tobj = {version = "2.0.4", default_features = false }
ahash = "0.8.2"
vulkanalia = { version = "0.16.0", features = [
    "libloading",
    "window",
    "provisional",
] }
winit = "0.27.5"
